# venom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: audit.yml  dependency-freshness.yml  quality.yml  tests.yml  udeps.yml
apps/api/: Cargo.toml
apps/api/src/: http_integration_publisher.rs  lib.rs  main.rs  postgres_backend.rs  service.rs
apps/api/src/app/: mod.rs  read_cursor.rs  service.rs
apps/api/src/http/: mod.rs
apps/api/src/infra/: http_integration_publisher.rs  mod.rs  postgres_backend.rs
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/venom-domain/: Cargo.toml
crates/venom-domain/benches/: hot_paths.rs
crates/venom-domain/examples/: acceptance.rs  contracts.rs  syft_grype_live.rs
crates/venom-domain/src/: component_inventory.rs  durable_scan_runtime.rs  durable_state.rs  finding_read_model.rs  finding_tracker.rs  integration_events.rs  integration_runtime.rs  lib.rs  syft_grype.rs
crates/venom-domain/src/findings/: collection_governance_overview.rs  collection_health.rs  contextual_risk.rs  finding_governance.rs  finding_ingestion.rs  finding_provider.rs  finding_provider_contract.rs  finding_read_model.rs  finding_tracker.rs  mod.rs  release_dashboard.rs
crates/venom-domain/src/integration/: integration_events.rs  mod.rs
crates/venom-domain/src/inventory/: component_inventory.rs  mod.rs
crates/venom-domain/src/operations/: mod.rs  system_event_trace.rs
crates/venom-domain/src/scanning/: collection_scan_scheduler.rs  durable_scan_runtime.rs  mod.rs  scan_execution.rs  scan_planning.rs  syft_grype.rs
docs/: agentic-development.md  architecture-invariants.md  bdd-feature-model.md  debt-closure-plan.md  documentation-model.md  legacy-value-audit.md  product-direction.md  reliability-hardening-plan.md  repo-structure.md  rust-naming-and-organization-strategy.md  ubiquitous-language.md  ui-ecosystem-evaluation.md  ui-visual-language.md  work-methodology.md
features/: FEATURE-TEMPLATE.feature  accept-risk.feature  bulk-accept-risk.feature  bulk-governance-by-tag.feature  bulk-suppress-finding.feature  classify-finding.feature  filter-governed-findings.feature  manage-collections.feature  manage-component-tags.feature  manage-context-profiles.feature  register-component.feature  reopen-finding.feature  report-finding.feature  request-collection-scan.feature  request-scan.feature  schedule-collection-scan.feature  suppress-finding.feature  view-active-findings.feature  view-bulk-governance-workbench.feature  view-collection-governance.feature  view-collection-health.feature  view-collection-schedules.feature  view-release-dashboard.feature
infra/: compose.yaml
scripts/: README.md  check-acceptance.sh  check-audit.sh  check-contracts.sh  check-dependency-freshness.sh  check-git-discipline.sh  check-heavy.sh  check-performance-baseline.sh  check-quality.sh  check-slice.sh  check-tests.sh  check-udeps.sh  check-wave.sh  check-web-e2e.sh  check-web.sh  configure-github-required-checks.sh  infra-smoke.sh  rehearse-infra.sh
(+251 files in other folders)
