[package]
name = "venom-api"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
venom-domain = { path = "../../crates/venom-domain" }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
