[package]
name = "venom-domain"
edition.workspace = true
version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tokio = { version = "1.52.3", features = ["io-util", "process", "time"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "html_reports"] }
cucumber = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "hot_paths"
harness = false
